# Wham_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
LBFGS/: LBFGS.h  LBFGSB.h
LBFGS/LBFGSpp/: BFGSMat.h  BKLDLT.h  Cauchy.h  LineSearchBacktracking.h  LineSearchBracketing.h  LineSearchMoreThuente.h  LineSearchNocedalWright.h
cmake/: FindFFTW3.cmake  TestSetup.cmake
parallel/: CMakeLists.txt
scripts/: build.sh
src/: Array.h  AutocorrelationOP.cpp  AutocorrelationOP.h  BWham.cpp  BWham.h  Bias.cpp  Bias.h  Bin.cpp  Bin.h  BwhamCalculationStrategy.cpp  BwhamCalculationStrategy.h  BwhamLBFGS.cpp  BwhamLBFGS.h  CMakeLists.txt  CombineData.cpp  CombineData.h  DataFileParser.h  Driver.cpp  Driver.h  FFT.cpp  FFT.h  HistogramOP.cpp  HistogramOP.h  Reweight.cpp  Reweight.h  SimpleBias.cpp  SimpleBias.h  SparseSampling.cpp  SparseSampling.h  TSoperation.cpp  TSoperation.h  TimeSeries.cpp  TimeSeries.h  UWhamCalculationStrategy.cpp  UWhamCalulationStrategy.h  Uwham.cpp  Uwham.h  UwhamAdaptiveMethods.cpp  UwhamAdaptiveMethods.h  UwhamCalculationStrategy.h  (+14 more)
test/: CMakeLists.txt  Test.ipynb  plot.py  plotHistogram.py  run_test.sh
test/PlotCode/: plot.py  plotKL.py  plotReweight.py
test/testAdaptive/: href.out  klref.out  normref.out  pjiref.out  refe.out
test/testLBFGS/: feref.out  klref.out  normref.out  pjiref.out  refe.out
test/testReweight/: ReweightAvgRef.out  a.out  plot.py
test/testSparseSampling/: pjiref.out
test/testTS/testHistogramOP/: testhist.out
tools/: CMakeLists.txt  CommonOperations.h  GeneralTemplateTools.h  InputParser.cpp  InputParser.h  OutputFunction.cpp  OutputFunction.h  RandomNumber.cpp  RandomNumber.h
